--- a/access/css/style.css
+++ b/access/css/style.css
@@ -215,7 +215,7 @@ section ul li img {
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     display: block;
-    margin 16px auto 0 auto;
+    margin: 16px auto 0 auto;
 }
 section ul li img:hover {
     transform: scale(1.03);
