--- a/access/css/style.css
+++ b/access/css/style.css
@@ -76,7 +76,6 @@ section {
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-
 section h2 {
   font-style: italic;
   text-decoration: underline;
@@ -85,23 +84,20 @@ section h2 {
   border-bottom: 3px solid #c8a165;
   padding-bottom: 8px;
 }
-
-section p {
+section h2 p {
   text-align: left;
   font-family: sans-serif;
   line-height: 1.8;
   color: #333;
 }
-
-#representantes {
+section #representantes {
   display: grid;
   grid-template-columns: 1fr;
   list-style: none;
   padding: 0;
   gap: 16px;
 }
-
-#representantes li {
+section #representantes li {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: maroon;
   padding: 16px;
@@ -109,8 +105,7 @@ section p {
   border-radius: 5px;
   transition: transform 0.3s ease;
 }
-
-#representantes li:hover {
+section #representantes li:hover {
   transform: translateX(10px);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
@@ -123,84 +118,6 @@ footer {
   padding: 2rem;
   margin-top: auto;
 }
-
 footer p {
   margin: 0;
-}
-
-@media (min-width: 768px) {
-  #representantes {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (min-width: 1024px) {
-  main {
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
-  }
-  #historia {
-    grid-column: 1/-1;
-  }
-  #representantes {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-section ul li img {
-  max-width: 100%;
-  height: 150px;
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  display: block;
-  margin: 16px auto 0 auto;
-}
-
-section ul li img:hover {
-  transform: scale(1.03);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-}
-
-section ul.con-imagen {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 16px;
-  list-style: none;
-  padding: 0;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-section ul.con-imagen li {
-  background-color: #f8c889;
-  padding: 1rem;
-  border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  text-align: center;
-}
-
-@media (min-width: 768px) {
-  section ul.con-imagen {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  section ul li img {
-    height: 180px;
-  }
-}
-section > img {
-  max-width: 600px;
-  height: auto;
-  width: 100%;
-  border-radius: 10%;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  display: block;
-  margin: 2rem auto;
-}
-
-section > img:hover {
-  transform: scale(1.03);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }/*# sourceMappingURL=style.css.map */
