--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -2,6 +2,7 @@
 @use '../abstracts/mixins' as *;
 header {
     grid-area: header;
+    position: relative;
     background: linear-gradient(135deg, $color-primary 0%, $color-secondary 100%);
     padding: $spacing-xlarge 0;
     text-align: center;
@@ -41,7 +42,8 @@ header {
         .hamburguesa {
             display: none;
             @include responsive(mobile) {
-                @include flex-center(column, flex-start, flex-start);
+                display: flex;
+                flex-direction: column;
                 cursor: pointer;
                 padding: 5px;
                 background: none;
@@ -60,6 +62,7 @@ header {
                 @include transition(transform);
                 @include transition(opacity);
                 border-radius: 3px;
+                display: block
             }
         }
         ul {
@@ -85,7 +88,6 @@ header {
                 @include responsive(mobile) {
                     width: 100%;
                     border-bottom: 1px solid $color-border;
-                    
                     &:last-child {
                         border-bottom: none;
                     }
@@ -98,11 +100,11 @@ header {
                     padding: $spacing-small $spacing-medium;
                     @include transition();
                     border-radius: 5px;
+                    display: block;
                     &:hover {
                         background-color: rgba(200, 161, 101, 0.2);
                     }
                     @include responsive(mobile) {
-                        display: block;
                         padding: $spacing-medium;
                         text-align: center;
                         color: $color-text;
