corrigiendo el style scss

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,5 @@
 @use "base/general";
 @use "componentes/header";
 @use "componentes/main";
+@use "componentes/animaciones";
+@use "utilities/querys";
